Initial commit for server side syncing with venmo api

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>TrollPay</title>
-  <p>Hello, world!</p>
+  <p>Hello, PAVAN!!!!!</p>
 
   <!-- Default Stylesheets -->
   <link rel="stylesheet" href="css/style.css">
