--- a/client/index.html
+++ b/client/index.html
@@ -19,10 +19,6 @@
     <!-- Custom styles for this template -->
     <link href="jumbotron-narrow.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -80,6 +76,11 @@
 
     </div> <!-- /container -->
 
+    <!-- Bootstrap JS Framework -->
+    <script src="dist/vendor/bootstrap-with-npm.min.js"></script>
+
+    <!-- ReactJS Framework -->
+    <script src="dist/vendor/react-with-jsxtransformer.min.js"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
