Add react components to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -46,6 +46,8 @@
         <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
       </div>
 
+      <div id="app"></div>
+
       <div class="row marketing">
         <div class="col-lg-6">
           <h4>Subheading</h4>
@@ -81,6 +83,10 @@
 
     <!-- ReactJS Framework -->
     <script src="dist/vendor/react-with-jsxtransformer.min.js"></script>
+
+    <!-- React build components -->
+    <script src="build/formInput.jsx" type="text/jsx"></script>
+    <script src="build/app.jsx" type="text/jsx"></script>    
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
