Update script/css paths

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,3 @@
-
-
-
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -14,7 +11,7 @@
     <title>Narrow Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="dist/vendor/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/vendor/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="jumbotron-narrow.css" rel="stylesheet">
@@ -78,17 +75,20 @@
 
     </div> <!-- /container -->
 
+    <!-- JQuery -->
+    <script src="dist/js/vendor/jquery.min.js"></script>
+
     <!-- Bootstrap JS Framework -->
-    <script src="dist/vendor/bootstrap-with-npm.min.js"></script>
+    <script src="dist/js/vendor/bootstrap.min.js"></script>
 
     <!-- ReactJS Framework -->
-    <script src="dist/vendor/react-with-jsxtransformer.min.js"></script>
+    <script src="dist/js/vendor/react-with-jsxtransformer.min.js"></script>
 
     <!-- React build components -->
     <script src="build/formInput.jsx" type="text/jsx"></script>
-    <script src="build/app.jsx" type="text/jsx"></script>    
+    <script src="build/app.jsx" type="text/jsx"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
   </body>
 </html>
