Add react-router dependencies and temporary cdn link

--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; Company 2014</p>
+        <p>&copy; Company 2015</p>
       </footer>
 
     </div> <!-- /container -->
@@ -83,6 +83,9 @@
 
     <!-- ReactJS Framework -->
     <script src="dist/js/vendor/react-with-jsxtransformer.min.js"></script>
+
+    <!-- React-router CDN Temp -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.min.js"></script>
 
     <!-- React build components -->
     <script src="build/formInput.jsx" type="text/jsx"></script>
