Initial commit for confirm jsx component.

--- a/client/index.html
+++ b/client/index.html
@@ -89,6 +89,7 @@
     <!-- React build components -->
     <script src="build/input.jsx" type="text/jsx"></script>
     <script src="build/signup.jsx" type="text/jsx"></script>
+    <script src="build/confirm.jsx" type="text/jsx"></script>
     <script src="build/app.jsx" type="text/jsx"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
