--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
     <div class="header clearfix">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation" class="active"><a href="#">Home</a></li>
+          <li role="presentation"><a href="#">Home</a></li>
           <li role="presentation"><a href="#">Login</a></li>
         </ul>
       </nav>
