Add more styling, update copy

--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,8 @@
       <h3 class="text-muted">TrollPay</h3>
     </div>
     <div class="jumbotron">
-      <h1>Send money to your friends...</h1>
-      <p class="lead">in $1 increments.</p>
+      <h1>Venmo your friends...</h1>
+      <p class="lead">$1 payments... one day at a time.</p>
       <form class="form-horizontal">
         <fieldset>
           <!-- Form Name -->
@@ -46,7 +46,7 @@
           </div>
           <!-- Prepended text-->
           <div class="form-group">
-            <label class="col-md-4 control-label" for="prependedtext">Amount</label>
+            <label class="col-md-4 control-label" for="prependedtext">Total Amount</label>
             <div class="col-md-4">
               <div class="input-group">
                 <span class="input-group-addon">$</span>
@@ -73,7 +73,7 @@
     </div>
     <div id="app"></div>
     <footer class="footer">
-      <p>&copy; Company 2015</p>
+      <p>&copy; Trollpay 2015</p>
     </footer>
   </div>
   <!-- /container -->
