--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="jumbotron">
       <h1>Venmo your friends...</h1>
-      <p class="lead">$1 payments... one day at a time.</p>
+      <p class="lead">$1 payments. One day at a time.</p>
       <form class="form-horizontal">
         <fieldset>
           <!-- Form Name -->
