Minify build jsx files in gulp. Closes #29

--- a/client/index.html
+++ b/client/index.html
@@ -87,10 +87,7 @@
   <!-- React-router CDN Temp -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.min.js"></script>
   <!-- React build components -->
-  <script src="build/input.jsx" type="text/jsx"></script>
-  <script src="build/signup.jsx" type="text/jsx"></script>
-  <script src="build/confirm.jsx" type="text/jsx"></script>
-  <script src="build/app.jsx" type="text/jsx"></script>
+  <script src="dist/js/build/build-jsx.min.js" type="text/jsx"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 </body>
