--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,10 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
   <title>TrollPay for Venmo</title>
-  <!-- Bootstrap core CSS -->
-  <link href="dist/css/vendor/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="jumbotron-narrow.css" rel="stylesheet">
+  <link href="./dist/css/vendor.min.css" rel="stylesheet">
+  <link href="./dist/css/app.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Chivo:400,900' rel='stylesheet' type='text/css'>
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -76,20 +74,8 @@
       <p>&copy; Trollpay 2015</p>
     </footer>
   </div>
-  <!-- /container -->
-  <link href='http://fonts.googleapis.com/css?family=Chivo:400,900' rel='stylesheet' type='text/css'>
-  <!-- JQuery -->
-  <script src="dist/js/vendor/jquery.min.js"></script>
-  <!-- Bootstrap JS Framework -->
-  <script src="dist/js/vendor/bootstrap.min.js"></script>
-  <!-- ReactJS Framework -->
-  <script src="dist/js/vendor/react-with-jsxtransformer.min.js"></script>
-  <!-- React-router CDN Temp -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.min.js"></script>
-  <!-- React build components -->
-  <script src="dist/js/build/build-jsx.min.js" type="text/jsx"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
+  <script src="./dist/js/vendor.min.js"></script>
+  <script src="./dist/js/app.min.js"></script>
 </body>
 
 </html>
