--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
   <link href="./dist/css/vendor.min.css" rel="stylesheet">
   <link href="./dist/css/app.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Chivo:400,900' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
